Fix issue where some avatars are served at the wrong size

--- a/css/github-embed.css
+++ b/css/github-embed.css
@@ -30,4 +30,5 @@ li.github-repo-contributor {
 	float: left;
 	margin-right: 1em;
 	margin-bottom: 0.5em;
+	width: 64px;
 }
